# expdpy

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  app_analyze.py  app_explore.py  app_learn.py  codecov.yml  pyproject.toml  requirements.txt  streamlit_app.py
.claude/skills/use-expdpy/: SKILL.md
.claude/skills/use-expdpy/references/: choosing-a-function.md  function-catalog.md  guardrails.md  recipes.md  result-contract.md
.claude/skills/use-expdpy/scripts/: check_panel.py
.claude/skills/write-function/: SKILL.md
.claude/skills/write-function/references/: conventions.md  templates.md  wiring-checklist.md
.claude/skills/write-function/scripts/: review_workflow.js  verify.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.streamlit/: config.toml
deploy/expdpy/: README.md  app.py  requirements.txt
deploy/expdpy/rsconnect-python/: expdpy.json
docs/: .gitignore  _quarto.yml  analyze.qmd  analyze_beta_convergence.qmd  analyze_convergence_clubs.qmd  analyze_iv_regression.qmd  analyze_kuznets_waves.qmd  analyze_marginal_effects_plot.qmd  analyze_sigma_convergence.qmd  changelog.qmd  custom.scss  examples.qmd  explore.qmd  index.qmd  learn.qmd  llms.txt  quickstart.qmd  robots.txt  shiny.qmd  streamlit.qmd  use-with-llms.qmd
docs/data/: kuznets.csv
docs/explanation/: data-model.qmd  kuznets-dataset.qmd  parity.qmd  shiny-vs-streamlit.qmd  streamlit-vs-shiny.qmd
docs/how-to/: customize-expand.qmd  customize-shiny.qmd  customize-streamlit.qmd
docs/tutorials/: using-expand.qmd  using-shiny.qmd  using-streamlit.qmd
notebooks/: analyze.ipynb  analyze_beta_convergence.ipynb  analyze_convergence_clubs.ipynb  analyze_iv_regression.ipynb  analyze_kuznets_waves.ipynb  analyze_marginal_effects_plot.ipynb  analyze_sigma_convergence.ipynb  explore.ipynb  learn.ipynb  quickstart.ipynb
schemas/: anthropic_tools.json  openai_tools.json
src/expdpy/: __init__.py  _animate.py  _common.py  _corr.py  _data_def.py  _labels.py  _meta.py  _panel.py  _panel_math.py  _roles.py  _theme.py  _types.py  _validation.py  animated_scatter.py  by_group.py  coefplot.py  composition.py  convergence.py  correlation.py  cre.py  did.py  distributions.py  dynamics.py  estimation.py  fwl.py  inference.py  iv.py  kuznets.py  marginal_effects.py  missing.py  outliers.py  panel_models.py  panel_structure.py  panel_summary.py  postestimation.py  regression.py  sandbox.py  scatter.py  spaghetti.py  tables.py  (+1 more)
src/expdpy/_estimation/: __init__.py  _capture.py  _fit.py  _formula.py  _results.py  _spec.py  _tidy.py  _vcov.py
src/expdpy/app/: __init__.py  _components.py  _config_io.py  _export_nb.py  _sample.py  _state.py  _upload.py  _varcat.py
src/expdpy/data/: ExPanD_config_russell_3000.json  ExPanD_config_worldbank.json  __init__.py  bolivia112_gdppc.parquet  bolivia112_gdppc_data_def.parquet  colonial_origins.parquet  colonial_origins_data_def.parquet  expdpy_config_kuznets.json  firms.parquet  firms_data_def.parquet  gapminder.parquet  gapminder_data_def.parquet  kuznets.parquet  kuznets_data_def.parquet  productivity.parquet  productivity_data_def.parquet  regional_conflict.parquet  regional_conflict_data_def.parquet  russell_3000.parquet  russell_3000_data_def.parquet  staggered_did.parquet  staggered_did_data_def.parquet  worldbank.parquet  worldbank_data_def.parquet  worldbank_var_def.parquet
src/expdpy/mcp/: __init__.py  __main__.py  _adapter.py  _data.py  _render.py  server.py
src/expdpy/pedagogy/: __init__.py  _interpret.py  _mixin.py  _registry.py
src/expdpy/pedagogy/_text/: __init__.py  causal.py  convergence.py  correlation.py  cre.py  kuznets.py  learn.py  outliers.py  panel.py  regression.py  tables.py
src/expdpy/streamlit_app/: __init__.py  _appcore.py  _components.py  _context.py  _entry.py  _export_nb.py  _handoff.py  _launcher.py  _pages.py  _pipeline.py  _render.py  _run.py  _sample.py  _sidebar.py  _state.py  _udv.py  _varcat.py  _widgets.py
tests/: conftest.py  test_animated_scatter.py  test_app.py  test_appcore.py  test_coefplot.py  test_composition.py  test_convergence.py  test_cre.py  test_data.py  test_data_def.py  test_did.py  test_docs_tooling.py  test_estimation.py  test_estimation_engine.py  test_fwl.py  test_glm.py  test_graphs.py  test_hardening.py  test_inference.py  test_iv.py  test_kuznets.py  test_kuznets_showcase.py  test_kuznets_vs_r.py  test_labels.py  test_llms_tooling.py  test_marginal_effects.py  test_mcp_registry.py  test_mcp_server.py  test_meta.py  test_outliers.py  test_palette.py  test_panel.py  test_panel_models.py  test_pedagogy.py  test_postestimation.py  test_regression.py  test_roles.py  test_sandbox.py  test_streamlit_app.py  test_tables.py  (+6 more)
tests/fixtures/: goldens.json  make_fixture.py  make_goldens.R  sample.csv
tools/: add_roles_to_data_defs.py  build_bolivia112_gdppc.py  build_colonial_origins.py  build_datasets.py  build_firms.py  build_kuznets.py  build_llms_txt.py  build_logo.py  build_productivity.py  build_quickstart_notebook.py  build_reference_enrichment.py  build_regional_conflict.py  build_source_pages.py  build_staggered_did.py  build_tool_schemas.py  build_use_skill.py  capture_screenshots.py  convert_rdata.R
