[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expdpy"
version = "0.4.15"
description = "Explore your panel data interactively — a Python port of the ExPanDaR R package."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Carlos Mendez" }]
keywords = [
    "panel data",
    "econometrics",
    "exploratory data analysis",
    "plotly",
    "pyfixest",
    "fixed effects",
    "visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0,<3",
    "numpy>=2.1",
    "scipy>=1.10",
    "plotly>=5.18",
    "pyfixest>=0.60",
    "great-tables>=0.9",
    "statsmodels>=0.14",
    "linearmodels>=6",
    "pyarrow>=14",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.40",
    "nbformat>=5.9",
    "openpyxl>=3.1",
]
# Retained as a no-op alias: random/between effects, the Hausman test and CRE now ship with
# the core install (linearmodels is a core dependency). `pip install 'expdpy[panel]'` still works.
panel = []

[project.scripts]
expdpy-explore = "expdpy.streamlit_app:main_explore"
expdpy-analyze = "expdpy.streamlit_app:main_analyze"
expdpy-learn = "expdpy.streamlit_app:main_learn"

[project.urls]
Homepage = "https://github.com/cmg777/expdpy"
Documentation = "https://cmg777.github.io/expdpy/"
Repository = "https://github.com/cmg777/expdpy"
Issues = "https://github.com/cmg777/expdpy/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs",
]
docs = [
    "quartodoc>=0.11",
    "griffe<1",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["src/expdpy"]

[tool.hatch.build.targets.sdist]
include = [
    "src/expdpy",
    "tests",
    "README.md",
    "LICENSE",
    "streamlit_app.py",
    "app_explore.py",
    "app_analyze.py",
    "app_learn.py",
    ".streamlit",
]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "D", "RUF"]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
    "E501", # line length handled by formatter
    "B008", # function call in default argument (intentional for np.nanmean etc.)
    "RUF022", # __all__ is intentionally grouped by topic, not sorted
]
# Greek symbols used in scientific prose/labels (β and λ are not flagged; σ is confusable with
# o, so it must be allowed explicitly to read as "σ-convergence" alongside "β-convergence").
allowed-confusables = ["σ"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"docs/*" = ["D"]
"tools/*" = ["D"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
files = ["src/expdpy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "against_r: numerical-parity tests that require R + the ExPanDaR package via rpy2",
    "streamlit: tests that require the Streamlit app extra",
    "panel: tests that require the linearmodels (panel) extra",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["expdpy"]
branch = true
omit = ["*/streamlit_app/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

# ----------------------------------------------------------------------------
# pixi (conda-forge) — environment & task management, benchmarked on pyfixest
# ----------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
expdpy = { path = ".", editable = true, extras = ["streamlit"] }

[tool.pixi.feature.test.dependencies]
pytest = ">=8"
pytest-cov = ">=5"
pytest-xdist = ">=3"
hypothesis = ">=6"
# numba so the test envs exercise pyfixest's JIT-compiled paths (e.g. ritest's
# `_resample`) — the same code Google Colab runs, which a numba-free env silently skips.
numba = "*"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.6"
mypy = ">=1.10"
pre-commit = ">=3.7"
pandas-stubs = ">=3.0.3.260530,<4"

[tool.pixi.feature.r.dependencies]
rpy2 = ">=3.6,<4"
r-base = ">=4.3"
# For the fwlplot parity test (the local fwlplot-r package is installed via remotes).
r-remotes = "*"
r-fixest = "*"
"r-data.table" = "*"
r-tinyplot = "*"
r-ggplot2 = "*"

[tool.pixi.feature.docs.dependencies]
quarto = ">=1.5"
quartodoc = ">=0.11"
griffe = "<1"
jupyter = "*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
default = { features = ["test", "py312"], solve-group = "py312" }
py310 = { features = ["test", "py310"] }
py311 = { features = ["test", "py311"] }
py312 = { features = ["test", "py312"], solve-group = "py312" }
py313 = { features = ["test", "py313"] }
r = { features = ["test", "r", "py312"], solve-group = "py312" }
lint = { features = ["lint", "py312"], solve-group = "py312" }
docs = { features = ["docs", "py312"], solve-group = "py312" }

[tool.pixi.tasks]
test = "pytest -n auto --cov=expdpy --cov-report=term-missing -m 'not against_r'"
test-r = "pytest -m against_r"
lint = "pre-commit run --all-files"
typecheck = "mypy src"
build-quickstart-notebook = "python tools/build_quickstart_notebook.py"
build-logo = "python tools/build_logo.py"
docs-build = "python tools/build_quickstart_notebook.py && quartodoc build --config docs/_quarto.yml && python tools/build_source_pages.py && python tools/build_reference_enrichment.py && quarto render docs"
